Fix misalignment on /checkout/registration page

--- a/app/assets/stylesheets/store/screen.css.scss
+++ b/app/assets/stylesheets/store/screen.css.scss
@@ -890,6 +890,8 @@ mark {background-color: $link_text_color; color: $layout_background_color; font-
   	margin:40px auto;
   	width:290px;
   }
+  #login #registration #existing-customer, #login #guest_checkout {margin-top:10px;}
+  #login #guest_checkout h6 {margin-bottom:38px;}
   #existing-customer {float:left;}
   #new-customer {float:right;}
   #signup #new-customer {float:left;}
